syntax = "proto3";

package audio;

option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

service AudioGuide {
  rpc BroadcastAudioToAll(stream AudioStream) returns (stream AudioStream);
  rpc BroadcastAudioToClient(stream AudioStream) returns (stream AudioStream);
  rpc InitializeConnection(ConnectedClient) returns (GenericResponse);
  rpc ClientDisconnection(ConnectedClient) returns (GenericResponse);
  rpc StartAudio(stream AudioCommand) returns (stream AudioCommand);
  rpc StopAudio(stream AudioCommand) returns (stream AudioCommand);
}

enum Command {
  START = 0;
  STOP  = 1;
}

message AudioStream {
  string client_id = 1;
  bytes audio_data = 2;
  string target_client_id = 4;
}

message StartAudioRequest {
  Command command = 1;
  string client_id = 2;
}

message StopAudioRequest {
  Command command = 1;
  string client_id = 2;
}

message AudioCommand {
  Command command = 1;
  string client_id = 2;
}

message GenericResponse {
  string message = 1;
}

message ConnectedClient {
  string client_id = 1;
}